<resources>
    <string name="app_name">Сalculator</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_dot">.</string>
    <string name="key_add">+</string>
    <string name="key_sub">-</string>
    <string name="key_mult">*</string>
    <string name="key_div">/</string>
    <string name="key_clear">C</string>
    <string name="key_delete"><![CDATA[<-]]></string>
    <string name="key_result">=</string>
    <string name="temp_string">0.0</string>
    <string name="temp_calc">Use a night theme?</string>
    <string name="start_calc">Start Calculator</string>

</resources>